--- a/p2app/templates/lesson.html
+++ b/p2app/templates/lesson.html
@@ -25,8 +25,8 @@
 		<div class="fader"></div>
 		
 		<div class="inners">
-		<h1>Follow the video guide</h1>
-			<p>To connect wix-domains.com to your site, complete the following <strong>5 steps</strong> in this interactive video guide.</p>
+		<h1>Intro to Python</h1>
+			<p>Hello world program <strong>5 steps</strong> in this interactive video guide.</p>
 			<button class="startCTA">Start
 
 <svg width="9px" height="11px" viewBox="0 0 9 11" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -59,20 +59,25 @@
 		<!-- Steps Wrapp -->
 	<div class="stepsWrapp">
 		
-			<!-- Step #1 -->
+        <!-- Step #1 -->
+        
 		<div class="step step1">
 			<div class="title">
 				<div class="icon"><span>1<sup>/5</sup></span></div>
-				<h3>Sign in to GoDaddy</h3>
+				<h3>Step 1</h3>
 			</div>
+            
+            
 			<div class="details">
-					<ul>
+				 <ul>
 					<li>
-<bullet></bullet><p>Go to  <a target="_blank" href="https://www.godaddy.com/">GoDaddy</a></p></li>
-				<li><bullet></bullet><p>Sign in to you account using your GoDaddy username and password</p></li>
-				</ul>
+                        <bullet></bullet>
+                        <p>create a .py file extension</p>  
+                    </li>
+				 </ul>
 			</div>
-		</div><!-- Step #1 - End -->
+		</div>
+        <!-- Step #1 - End -->
 		
 		
 		
